# iris-coq

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Makefile  Makefile.coq.local  README.md  dune  make-package  rocq-iris.opam
algebra/: cmra.v
barrier/: barrier.v
docs/: dune.md
iris/: dune
iris/algebra/: gmap.v
iris/algebra/lib/: frac_auth.v
iris/base_logic/: bi.v
iris/base_logic/lib/: fancy_updates_from_vs.v  gen_heap.v  later_credits.v  proph_map.v
iris/bi/: big_op.v  monpred.v  plainly.v  sbi.v  sbi_unfold.v
iris/bi/lib/: core.v
iris/program_logic/: ownp.v
iris/proofmode/: base.v  class_instances.v  class_instances_frame.v  class_instances_later.v  ltac_tactics.v  reduction.v
iris/si_logic/: siprop.v
iris_deprecated/: dune
iris_deprecated/base_logic/: viewshifts.v
iris_heap_lang/: dune  lang.v  primitive_laws.v  proofmode.v
iris_heap_lang/lib/: atomic_heap.v  increment.v  lock.v  spin_lock.v  ticket_lock.v
iris_unstable/: dune
modures/: proofmode.v
prelude/: tactics.v
tests/: atomic.ref  atomic.v  heap_lang.ref  heap_lang.v  heap_lang_proph.v  lock.v  proofmode.ref  proofmode.v  sbi_unfold.ref  sbi_unfold.v
